--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "concurrently": "^5.3.0",
     "cookie-session": "^1.4.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "express": "^4.17.1",
     "mongoose": "^5.9.15",
     "node-sass": "^4.14.1",
